--- a/src/style/style.css
+++ b/src/style/style.css
@@ -51,6 +51,7 @@ body {
 .content.container {
   display: flex;
   flex-grow: 1;
+  overflow-y: hidden;
 }
 
 .sidebar.container {
@@ -99,6 +100,7 @@ body {
   margin: 8px 0;
   padding: 4px;
   gap: 8px;
+  overflow-y: auto;
 }
 
 .sidebar.project-item {
@@ -221,6 +223,7 @@ body {
   justify-content: center;
   flex-grow: 1;
   box-shadow: 0 5px 2px 0px #be7303 inset;
+  overflow-y: scroll;
 }
 
 .add-todo.btn > i,
