--- a/src/style/style.css
+++ b/src/style/style.css
@@ -750,6 +750,10 @@ textarea.todo:disabled {
   .expand-todo.btn {
     width: 100%;
   }
+
+  .sidebar.project-item {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (max-width: 470px) {
